objects/OUV_AnnualMarketSummary__c.object
<CustomObject>
    <label>Annual Market Summary</label>
    <nameField>
        <displayFormat>AMS-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Market Summary</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>OUV_Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>MENA</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_CountryMD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Managing Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AnnualMarketSummaries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VLA_Signatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VLA Signatory</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Annual_Market_Summary9j7o</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_StatusType__c</fullName>
        <inlineHelpText>Active = Live budget
Inactive = Budget Under Development</inlineHelpText>
        <label>Budget Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_AMSRecordID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Load Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_FinancialYear__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2015/2016</fullName>
                </value>
                <value>
                    <fullName>2016/2017</fullName>
                </value>
                <value>
                    <fullName>2017/2018</fullName>
                </value>
                <value>
                    <fullName>2018/2019</fullName>
                </value>
                <value>
                    <fullName>2019/2020</fullName>
                </value>
                <value>
                    <fullName>2020/2021</fullName>
                </value>
                <value>
                    <fullName>2021/2022</fullName>
                </value>
                <value>
                    <fullName>2022/2023</fullName>
                </value>
                <value>
                    <fullName>2023/2024</fullName>
                </value>
                <value>
                    <fullName>2024/2025</fullName>
                </value>
                <value>
                    <fullName>2025/2026</fullName>
                </value>
                <value>
                    <fullName>2026/2027</fullName>
                </value>
                <value>
                    <fullName>2027/2028</fullName>
                </value>
                <value>
                    <fullName>2028/2029</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_FinanceManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Finance Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AnnualMarketSummaries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_MarketBudgetQ1__c</fullName>
        <description>Total of that fiscal year June budget object total</description>
        <inlineHelpText>Market Budgets for OUV Reporting Category: Active</inlineHelpText>
        <label>Market Budget Q1: Active</label>
        <summarizedField>OUV_Budget__c.OUV_June__c</summarizedField>
        <summaryFilterItems>
            <field>OUV_Budget__c.OUV_Main_Reporting_Level__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>OUV_Budget__c.OUV_AnnualMarketSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OUV_MarketBudgetQ2__c</fullName>
        <description>Total of that fiscal year September budget object total</description>
        <inlineHelpText>Market Budgets for OUV Reporting Category: Active</inlineHelpText>
        <label>Market Budget Q2: Active</label>
        <summarizedField>OUV_Budget__c.OUV_September__c</summarizedField>
        <summaryFilterItems>
            <field>OUV_Budget__c.OUV_Main_Reporting_Level__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>OUV_Budget__c.OUV_AnnualMarketSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OUV_MarketBudgetQ3__c</fullName>
        <description>Total of that fiscal year December budget object total</description>
        <inlineHelpText>Market Budgets for OUV Reporting Category: Active</inlineHelpText>
        <label>Market Budget Q3: Active</label>
        <summarizedField>OUV_Budget__c.OUV_December__c</summarizedField>
        <summaryFilterItems>
            <field>OUV_Budget__c.OUV_Main_Reporting_Level__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>OUV_Budget__c.OUV_AnnualMarketSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OUV_AnnualBudgetOfJaguar__c</fullName>
        <inlineHelpText>Budget Figure for March, including Reporting Category: Active Inactive Unactionable</inlineHelpText>
        <label>All Annual Budget - Jaguar</label>
        <summarizedField>OUV_Budget__c.OUV_March__c</summarizedField>
        <summaryFilterItems>
            <field>OUV_Budget__c.OUV_Brand__c</field>
            <operation>equals</operation>
            <value>Jaguar</value>
        </summaryFilterItems>
        <summaryForeignKey>OUV_Budget__c.OUV_AnnualMarketSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OUV_AnnualBudgetofMarket__c</fullName>
        <inlineHelpText>Budget Figure for March, including Reporting Category: Active Inactive Unactionable</inlineHelpText>
        <label>All Annual Budget - Market</label>
        <summarizedField>OUV_Budget__c.OUV_March__c</summarizedField>
        <summaryForeignKey>OUV_Budget__c.OUV_AnnualMarketSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OUV_AnnualBudgetThreshold__c</fullName>
        <label>Annual Budget Threshold</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OUV_MarketingFleetManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Fleet Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Annual_Market_Summaries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_AnnualBudgetOfLandRover__c</fullName>
        <inlineHelpText>Budget Figure for March, including Reporting Category: Active Inactive Unactionable</inlineHelpText>
        <label>All Annual Budget - Land Rover</label>
        <summarizedField>OUV_Budget__c.OUV_March__c</summarizedField>
        <summaryFilterItems>
            <field>OUV_Budget__c.OUV_Brand__c</field>
            <operation>equals</operation>
            <value>Land Rover</value>
        </summaryFilterItems>
        <summaryForeignKey>OUV_Budget__c.OUV_AnnualMarketSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OUV_AnnualMarketSummaryName__c</fullName>
        <formula>TEXT(OUV_FinancialYear__c)+&apos; &apos;+TEXT(OUV_Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Market Summary Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_ValidatedAnnualBudgetTotal__c</fullName>
        <label>Validated Annual Budget Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_MarketingFleetAdministrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Fleet Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Annual_Market_SummaryiTjE</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>